# ChangeLog for gnome-base/gnome-common
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.88 2011/08/13 17:21:01 armin76 Exp $

  13 Aug 2011; Raúl Porcel <armin76@gentoo.org> gnome-common-2.34.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #369909

  17 Jul 2011; Markus Meier <maekke@gentoo.org> gnome-common-2.34.0.ebuild:
  arm stable, bug #369909

  14 Jul 2011; Thomas Kahle <tomka@gentoo.org> gnome-common-2.34.0.ebuild:
  x86 stable per bug 369909

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  gnome-common-2.34.0.ebuild:
  Stable on amd64 wrt bug #278255

*gnome-common-2.34.0 (03 Apr 2011)

  03 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-common-2.24.0.ebuild, -gnome-common-2.26.0.ebuild,
  +gnome-common-2.34.0.ebuild:
  Version bump. Drop gnome1 macros. Clean up old revisions.

  07 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gnome-common-2.28.0.ebuild:
  ppc64 stable wrt #324077

  02 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  gnome-common-2.28.0.ebuild:
  Marked ~x64-macos, bug #333981

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> gnome-common-2.28.0.ebuild:
  Marked ppc for bug #324077.

  18 Aug 2010; Markus Meier <maekke@gentoo.org> gnome-common-2.28.0.ebuild:
  arm stable, bug #314899

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> gnome-common-2.28.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #314899

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gnome-common-2.28.0.ebuild:
  Stable for HPPA (bug #314899).

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gnome-common-2.24.0.ebuild,
  gnome-common-2.26.0.ebuild, gnome-common-2.28.0.ebuild:
  Drop HPPA keywording (bug #324511).

  04 Jun 2010; Markus Meier <maekke@gentoo.org> gnome-common-2.28.0.ebuild:
  x86 stable, bug #314899

  03 May 2010; Olivier Crête <tester@gentoo.org>
  gnome-common-2.28.0.ebuild:
  amd64 stable, bug #314899

*gnome-common-2.28.0 (24 Feb 2010)
