@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/librsvg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/ChangeLog,v 1.244 2011/08/13 17:28:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/librsvg/ChangeLog,v 1.245 2011/08/20 18:38:07 jer Exp $
+
+  20 Aug 2011; Jeroen Roovers <jer@gentoo.org> librsvg-2.34.0.ebuild:
+  Stable for HPPA (bug #369909).
 
   13 Aug 2011; Raúl Porcel <armin76@gentoo.org> librsvg-2.34.0.ebuild:
   alpha/ia64/sh/sparc stable wrt #369909
