@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-common
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.88 2011/08/13 17:21:01 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.89 2011/08/20 18:36:58 jer Exp $
+
+  20 Aug 2011; Jeroen Roovers <jer@gentoo.org> gnome-common-2.34.0.ebuild:
+  Stable for HPPA (bug #369909).
 
   13 Aug 2011; Raúl Porcel <armin76@gentoo.org> gnome-common-2.34.0.ebuild:
   alpha/ia64/sh/sparc stable wrt #369909
